--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="css/base.css">
   </head>
   <body>
     <header>
@@ -16,10 +16,15 @@
       <section id="photo-template">
         <h2></h2>
         <img src="" alt="">
-        <p></p>
+        <p class="keyword"></p>
+        <p class="description"></p>
+        <p class="horns"></p>
+      
+        
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 
     <footer>
       &copy; 2018 Code Fellows
