--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layouts.css">
   </head>
   <body>
     <header>
@@ -17,14 +18,10 @@
         <h2></h2>
         <img src="" alt="">
         <p></p>
-
-
-
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
-
     <footer>
       &copy; 2018 Code Fellows
     </footer>
