--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layouts.css">
+    <script id="page-template" type="text/x-tmpl-mustache">
+      <div>
+        <h2>{{page}}</h2>
+        {{body}}
+      </div>
+    </script>
   </head>
   <body>
     <header>
@@ -21,6 +27,7 @@
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/mustache@latest"></script>
     <script src="js/app.js"></script>
     <footer>
       &copy; 2018 Code Fellows
