--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layouts.css">
+    <script id="photos-template" type="text/x-tmpl-mustache">
+      
+      <div>
+      <h2>{{title}}</h2>
+      <img src="" alt="">
+      <p></p>
+      </div>
+  </script>
+    
   </head>
   <body>
     <header>
@@ -12,18 +21,24 @@
       <select id="dropdown">
         <option value="default">Filter by Keyword</option>
       </select>
+
+      <button type="button" value="page2" id="togglePage"> button </button>
+
     </header>
-    <main>
-      <section id="photo-template">
-        <h2></h2>
-        <img src="" alt="">
-        <p></p>
+    <main> 
+<!-- when we refactor, main will have an id and nothing in it... -->
+    <section id="photo-template">
+      <h2></h2>
+      <img src="" alt="">
+      <p></p>
       </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/mustache@latest"></script>
     <script src="js/app.js"></script>
     <footer>
       &copy; 2018 Code Fellows
+
     </footer>
   </body>
 </html>
