--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layouts.css">
     <script id="photos-template" type="text/x-tmpl-mustache">
-      
+
       <div>
       <h2>{{title}}</h2>
       <img src="" alt="">
       <p></p>
       </div>
   </script>
-    
+
   </head>
   <body>
     <header>
@@ -21,11 +21,12 @@
       <select id="dropdown">
         <option value="default">Filter by Keyword</option>
       </select>
+      <button type="button" value="data/page-1.json" id="togglePage1"> button </button>
 
-      <button type="button" value="page2" id="togglePage"> button </button>
+      <button type="button" value="data/page-2.json" id="togglePage2"> button </button>
 
     </header>
-    <main> 
+    <main>
 <!-- when we refactor, main will have an id and nothing in it... -->
     <section id="photo-template">
       <h2></h2>
