--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <select id="dropdown">
         <option value="default">Filter by Keyword</option>
       </select>
-      <button type="button" value="data/page-1.json" id="togglePage1"> button </button>
+      <button type="button" value="data/page-1.json" id="load-page-1"> Load Page 1 </button>
 
-      <button type="button" value="data/page-2.json" id="togglePage2"> button </button>
+      <button type="button" value="data/page-2.json" id="load-page-2"> Load Page 2 </button>
 
     </header>
     <main>
