--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layouts.css">
     <script id="photos-template" type="text/x-tmpl-mustache">
-
       <div>
-      <h2>{{title}}</h2>
-      <img src="" alt="">
-      <p></p>
+        <h2>{{title}}</h2>
+        <img src="{{image_url}}" alt="">
+        <p>{{description}}</p>
+        {{{body}}}
       </div>
-  </script>
-
+    </script>
   </head>
   <body>
     <header>
@@ -21,16 +20,14 @@
       <select id="dropdown">
         <option value="default">Filter by Keyword</option>
       </select>
-      <button type="button" value="data/page-1.json" id="load-page-1"> Load Page 1 </button>
-
-      <button type="button" value="data/page-2.json" id="load-page-2"> Load Page 2 </button>
-
+      <button type="button" id="load-page-1"> Load Page 1 </button>
+      <button type="button" id="load-page-2"> Load Page 2 </button>
     </header>
-    <main>
+    <main id="my-main">
 <!-- when we refactor, main will have an id and nothing in it... -->
     <section id="photo-template">
       <h2></h2>
-      <img src="" alt="">
+      <img src="" alt="" id="photo">
       <p></p>
       </section>
     </main>
@@ -39,9 +36,6 @@
     <script src="js/app.js"></script>
     <footer>
       &copy; 2018 Code Fellows
-
     </footer>
   </body>
 </html>
-
-<!-- Phantom push to see if the site deploys to GitHub.io -->
