--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layouts.css">
+    <link rel="stylesheet" href="css/modules.css">
     <script id="photos-template" type="text/x-tmpl-mustache">
       
       <div>
