--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/layouts.css">
     <script id="photos-template" type="text/x-tmpl-mustache">
       <div>
-      <h2>{{title}}</h2>
-      <img src="{{image_url}}" alt="">
-      <p>{{description}</p>
+        <h2>{{title}}</h2>
+        <img src="{{image_url}}" alt="">
+        <p>{{description}</p>
       </div>
       {{{body}}}
   </script>
@@ -23,22 +23,12 @@
       <button type="button" value="data/page-1.json" id="load-page-1"> Load Page 1 </button>
       <button type="button" value="data/page-2.json" id="load-page-2"> Load Page 2 </button>
     </header>
-    <main>
-<!-- when we refactor, main will have an id and nothing in it... -->
-    <!-- <section id="photo-template">
-      <h2></h2>
-      <img src="" alt="">
-      <p></p>
-      </section>
-    </main> -->
+    <main></main>
     <script src="https://unpkg.com/mustache@latest"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
     <footer>
       &copy; 2018 Code Fellows
-
     </footer>
   </body>
 </html>
-
-<!-- Phantom push to see if the site deploys to GitHub.io -->
