added sort order, ps

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </select>
       <button type="button" value="data/page-1.json" id="load-page-1"> Load Page 1 </button>
       <button type="button" value="data/page-2.json" id="load-page-2"> Load Page 2 </button>
-      <button type="button" id="sort"> Sort by number of horns</button>
-
+      <button type="button" value="sortAlpha" id="sort"> Sort by name </button>
+      <button type="button" value="sortNum" id="sort"> Sort by number </button>
     </header>
     <main></main>
     <script src="https://unpkg.com/mustache@latest"></script>
