--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <select id="dropdown">
         <option value="default">Filter by Keyword</option>
       </select>
+      <select id="sort-by">
+        <option value="default">Sort by</option>
+        <option value="alpha">Alphabetical</option>
+        <option value="num-horns">Number of Horns</option>
+      </select>
       <button type="button" value="data/page-1.json" id="load-page-1"> Page 1 </button>
       <button type="button" value="data/page-2.json" id="load-page-2"> Page 2 </button>
     </header>
